<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transport</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2290483572@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pthread</depend>
  <depend>rclcpp</depend>
  <depend>base_interfaces</depend>
  <depend>libbase</depend>
  <depend>backward_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
